syntax = "proto3";

package yandex.cloud.priv.serverless.functions.v1.inner;

import "google/protobuf/timestamp.proto";
import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/serverless/functions/v1/inner;inner";

service ConnectionService {
  rpc Get (GetConnectionRequest) returns (Connection);
  rpc Send(SendToConnectionRequest) returns (SendToConnectionResponse);
  rpc Disconnect(DisconnectRequest) returns (DisconnectResponse);
}

message GetConnectionRequest {
  string connection_id = 1 [(required) = true, (length) = "<=50"];
}

message Connection {
  string id = 1;
  Identity identity = 2;
  google.protobuf.Timestamp connected_at = 3;
  google.protobuf.Timestamp last_active_at = 4;
}

message Identity {
  string source_ip = 1;
  string user_agent = 2;
}

message DisconnectRequest {
  string connection_id = 1 [(required) = true, (length) = "<=50"];
}

message SendToConnectionRequest {
  string connection_id = 1 [(required) = true, (length) = "<=50"];
  bytes data = 2 [(required) = true, (length) = "<=131072"];
}

message SendToConnectionResponse {}

message DisconnectResponse {}
