syntax = "proto3";

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/connman";

import "cloud/dataplatform/api/connman/connection_service.proto";

package yandex.cloud.priv.connman.v1;

message ConnectionOperationMetadata {
    oneof type {
        CreateConnectionMetadata create = 1;
        UpdateConnectionMetadata update = 2;
        DeleteConnectionMetadata delete = 3;
    }
}
